--- a/blastoff.html
+++ b/blastoff.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Blastoff!</title>
-	<link rel="stylesheet" type"text/css" href="style.css"/>
+	<link rel="stylesheet" type"text/css" href="Little-Jeffy-Joe.github.io/style.css"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js">
 
 </script><link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css"/>
@@ -21,9 +21,9 @@ function smoke{
 </script>
 <body>
 
-	<img id = 'rocket' src = "assets/rocket.jpg"/>
-	<img id = 'moon' src = "assets/moon.jpg"/>
-	<img id = 'earth' src = "assets/earth.jpg" onclick = smoke1/>
+	<img id = 'rocket' src = "Little-Jeffy-Joe.github.io/rocket.jpg"/>
+	<img id = 'moon' src = "Little-Jeffy-Joe.github.io/moon.jpg"/>
+	<img id = 'earth' src = "Little-Jeffy-Joe.github.io/earth.jpg" onclick = smoke1/>
 	<div id=''>
 	</div>
 </body>
