--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<DOCTYPE html>
+<html>
+  <head>
+    
+  </head>
+  <body>
+    <h1>
+      You seem lost. Let me help you.
+    </h1>
+    <a href="/test.html">
+      chat here!
+    </a>
+  </body>
+</html>
